# poke

./: .gitignore  .gitmodules  .x-sc_copyright_check  .x-sc_makefile_path_separator_check  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_strncpy  .x-sc_trailing_blank  .x-sc_unmarked_diagnostics  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  TODO  acinclude.m4  bootstrap.conf  cfg.mk  configure.ac
doc/: .gitignore  Makefile.am  fdl.texi  pkl-spec.texi  pkl.texi  poke-rabbits-july-2019.tpp  poke.texi  poke.tpp  pokeint.texi
etc/: Makefile.am  boehm-gc.suppressions  parse-valgrind-suppressions.sh  poke-default.css  poke-gdb.scm  poke-ras-mode.el
gdb/: poke-gdb.scm
m4/: libtextstyle-hyperlink.m4
pickles/: Makefile.am  bmp.pk  bpf.pk  bson.pk  btf.pk  ctf.pk  deflate.pk  dwarf.pk  elf.pcl  elf.pk  elf.pkl  flattening.pk  flv.pk  foo.pk  gzip.pk  id3v1.pk  id3v2.pk  injection.pk  inodes.pk  jpeg.pk  jpg.pk  leb128.pk  mp3.pk  patterns.pk  pdp10.pk  pkl.pk  qsort.pk  qsort.pkl  sparc.pk  sparc.pkl  std.pk  swf.pk
pickles/future/: bmp.pk  bson.pk  dwarf.pk  elf-future.pk  jpeg.pk  leb128.pk  tar.pk
pk/: Makefile.am  std.pk
pk/pickles/: Makefile.am  deflate.pk  qsort.pk
pkl/: Makefile.am  bson.pkl  deflate.pk  elf.pk  elf.pkl  flattening.pkl  flv.pk  flv.pkl  id3v1.pkl  id3v2.pkl  inodes.pkl  jpeg.pkl  leb128.pkl  pkl.pkl  sparc.pkl  std.pkl  swf.pkl
pkl/pickles/: Makefile.am  flattening.pk  gzip.pkl  id3v2.pkl
po/: ChangeLog  POTFILES.in  poke.pot
pokelib/: elf.pcl  elf32.pcl  elf64.pcl  sparc.pcl  std.pcl
src/: Makefile.am  io-be.h  io-file.c  io.c  io.h  ios-dev-file.c  ios-dev.h  ios.c  ios.h  pcl-ast.c  pcl-ast.h  pcl-gen.c  pcl-gen.h  pcl-lex.l  pcl-ops.def  pcl-opt.c  pcl-opt.h  pcl-parser.c  pcl-parser.h  pcl-tab.y  pcl-types.def  pcl.c  pcl.h  pio-be.h  pio-file.c  pio.c  pio.h  pk-cmd.c  pk-cmd.h  pk-cmd.pk  pk-def.c  pk-dump.c  pk-dump.pk  pk-file.c  pk-help.c  pk-info.c  pk-io-file.c  pk-io.c  pk-io.h  pk-misc.c  (+68 more)
testsuite/: Makefile.am
testsuite/config/: default.exp
testsuite/lib/: poke-dg.exp  poke.exp
testsuite/poke.base/: Makefile.am  base.exp
testsuite/poke.cmd/: cmd.exp  dump-1.pk  dump-2.pk  dump-3.pk  dump-4.pk  set-endian.pk  set-error-on-warning.pk  set-obase.pk
testsuite/poke.map/: map-size-1.pk  map.exp  map.pkl  mapped-attr.pk  maps-arrays-1.pk  maps-arrays-10.pk  maps-arrays-11.pk  maps-arrays-12.pk  maps-arrays-13.pk  maps-arrays-14.pk  maps-arrays-15.pk  maps-arrays-2.pk  maps-arrays-3.pk  maps-arrays-4.pk  maps-arrays-5.pk  maps-arrays-6.pk  maps-arrays-7.pk  maps-arrays-8.pk  maps-arrays-9.pk  maps-arrays.pk  maps-offsets.pk  maps-simple.pk  maps-structs-1.pk  maps-structs-10.pk  maps-structs-11.pk  maps-structs-12.pk  maps-structs-13.pk  maps-structs-14.pk  maps-structs-15.pk  maps-structs-16.pk  maps-structs-17.pk  maps-structs-18.pk  maps-structs-2.pk  maps-structs-3.pk  maps-structs-4.pk  maps-structs-5.pk  maps-structs-6.pk  maps-structs-8.pk  maps-structs-9.pk  maps-structs-constraints-1.pk  (+80 more)
testsuite/poke.pkl/: add-1.pk  add-1.pkl  add-2.pk  add-2.pkl  add-integers-1.pk  add-integers-2.pk  add-integers-3.pk  add-integers-4.pk  add-offsets-1.pk  add-offsets-2.pk  add-offsets-3.pk  add-offsets-4.pk  add-offsets-5.pk  and-1.pk  and-10.pk  and-11.pk  and-12.pk  and-13.pk  and-2.pk  and-3.pk  and-4.pk  and-5.pk  and-6.pk  and-7.pk  and-8.pk  and-9.pk  array-1.pk  array-2.pk  array-diag-1.pk  array-diag-2.pk  array-diag-3.pk  array-siz-1.pk  array-siz-diag-1.pk  array-type-diag-1.pk  array-type-diag-2.pk  arrays-1.pk  arrays-10.pk  arrays-11.pk  arrays-12.pk  arrays-2.pk  (+472 more)
testsuite/poke.std/: atoi-1.pk  atoi-10.pk  atoi-11.pk  atoi-12.pk  atoi-13.pk  atoi-2.pk  atoi-3.pk  atoi-4.pk  atoi-5.pk  atoi-6.pk  atoi-7.pk  atoi-8.pk  atoi-9.pk  catos-1.pk  qsort.pk  std.exp  strstr.pk  substr.pk
