dist_pkgdata_DATA = bmp.pk \
                    bson.pk \
                    deflate.pk \
                    dwarf.pk \
                    elf.pk \
                    flattening.pk \
                    flv.pk \
                    foo.pk \
                    gzip.pk \
                    id3v1.pk \
                    id3v2.pk \
                    inodes.pk \
                    jpeg.pk \
                    leb128.pk \
                    mp3.pk \
                    patterns.pk \
                    qsort.pk \
                    sparc.pk \
                    swf.pk
