dist_pkgdata_DATA = bmp.pk \
                    bson.pk \
                    deflate.pk \
                    dwarf.pk \
                    elf.pk \
                    flv.pk \
                    gzip.pk \
                    id3v1.pk \
                    id3v2.pk \
                    jpeg.pk \
                    leb128.pk \
                    mp3.pk \
                    swf.pk \
                    ctf.pk \
                    tar.pk
