dist_pkgdata_DATA = std.pkl \
                    bmp.pkl \
                    bson.pkl \
                    deflate.pkl \
                    dwarf.pkl \
                    elf.pkl \
                    flattening.pkl \
                    flv.pkl \
                    foo.pkl \
                    gzip.pkl \
                    id3v1.pkl \
                    id3v2.pkl \
                    inodes.pkl \
                    jpeg.pkl \
                    leb128.pkl \
                    mp3.pkl \
                    patterns.pkl \
                    qsort.pkl \
                    sparc.pkl \
                    swf.pkl
