# Copyright (C) 2018 Jose E. Marchesi

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

picklesdir = $(pkgdatadir)/pickles/

dist_pickles_DATA = bmp.pk \
                    bson.pk \
                    deflate.pk \
                    dwarf.pk \
                    elf.pk \
                    flattening.pk \
                    flv.pk \
                    foo.pk \
                    gzip.pk \
                    id3v1.pk \
                    id3v2.pk \
                    inodes.pk \
                    jpeg.pk \
                    leb128.pk \
                    mp3.pk \
                    patterns.pk \
                    qsort.pk \
                    sparc.pk \
                    swf.pk
