# Copyright (C) 2018 Jose E. Marchesi

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

picklesdir = $(pkgdatadir)/pickles/

dist_pickles_DATA = bmp.pkl \
                    bson.pkl \
                    deflate.pkl \
                    dwarf.pkl \
                    elf.pkl \
                    flattening.pkl \
                    flv.pkl \
                    foo.pkl \
                    gzip.pkl \
                    id3v1.pkl \
                    id3v2.pkl \
                    inodes.pkl \
                    jpeg.pkl \
                    leb128.pkl \
                    mp3.pkl \
                    patterns.pkl \
                    qsort.pkl \
                    sparc.pkl \
                    swf.pkl
